@@ -271,6 +271,9 @@ Other Changes
 
 * SOLR-8074: LoadAdminUIServlet directly references admin.html (Mark Miller, Upayavira)
 
+* SOLR-4854: Add a test to assert that [elevated] DocTransfer works correctly with javabin
+  response format. (Ray, shalin)
+
 ==================  5.3.1 ==================
 
 Bug Fixes
